<resources>
    <string name="app_name">Capstone</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="descriptionTestString">Descriptiongit stat</string>
    <string name="forumTestString">Forum</string>
    <string name="create_thread">Create Thread</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="created_at">Created At:</string>
    <string name="post_description">Post Description</string>
</resources>
