<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_post"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title="Create Post"></item>
    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never"
        android:title="@string/home"></item>
    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never"
        android:title="@string/profile"></item>
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never"
        android:title="@string/logout"></item>




</menu>