<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_post_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_main"
    tools:context="com.example.nicholaskirschke.capappcpsc.CreatePostPage">

    <TextView
        android:text="@string/create_thread"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvThread"
        android:textSize="30sp" />

    <EditText
        android:layout_width="fill_parent"
        android:background="@android:color/white"
        android:id="@+id/etThreadTitle"
        android:layout_below="@+id/tvThread"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_height="50dp"
        android:hint="@string/title" />
    <EditText
        android:layout_width="fill_parent"
        android:background="@android:color/white"
        android:layout_below="@+id/etThreadTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/etThreadDescription"
        android:hint="@string/description"
        android:layout_height="150dp"
        android:layout_marginTop="20dp" />
    <Button
        android:text="@string/create_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etThreadDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/btThread"
        android:textAllCaps="false"/>




</RelativeLayout>
